--- a/Activity/style.css
+++ b/Activity/style.css
@@ -1,3 +1,4 @@
+  
 *{box-sizing: border-box;}
 body{
     margin:0px;
@@ -11,7 +12,7 @@ body{
     height: 100%;
     width:100%;
 }
-.record-btn{
+.record-btn,.capture-btn{
     position: fixed;
     height: 5rem;
     width: 5rem;
@@ -20,4 +21,7 @@ body{
     border-radius: 50%;
     right: 4vw;
     top: 34vh;
+}
+.capture-btn{
+    top:55vh;
 }
