--- a/Activity/style.css
+++ b/Activity/style.css
@@ -1,6 +1,7 @@
 *{box-sizing: border-box;}
 body{
     margin:0px;
+    overflow: hidden;
 }
 .video-container{
     height: 100vh;
@@ -10,6 +11,8 @@ body{
 .video{
     height: 100%;
     width:100%;
+    transform: scale(1.5);
+   
 }
 .record-btn,.capture-btn{
     height: 4.5rem;
@@ -33,7 +36,7 @@ body{
     border: 0.5rem solid white;
     position: fixed;
     top: 30vh;
-    z-index: 2;
+    z-index: 6;
     border-radius: 50%;
     display: flex;
     justify-content: center;
@@ -70,8 +73,9 @@ body{
     height:50vh;
     width:4rem;
     position: fixed;
-    top:10vh;
+    top:15vh;
     left:5vw;
+    z-index:6;
 }
 .filter{
    background-image: url("https://picsum.photos/id/237/200/300"); 
@@ -89,7 +93,41 @@ height: 20%;
     font-family: sans-serif;
     font-weight: 600;
     display: none;
+    box-shadow: tomato;
 }
 .timing-active{
     display: block;
+}
+
+.ui-filter{
+    height:100vh;
+    width:100vw;
+    position: fixed;
+    z-index:4;
+    display: none;
+    
+
+}
+.ui-filter-active{
+    display: block;
+}
+.zoom{
+    height: 7rem;
+    width: 3rem;
+    background-color: #444;
+    position: fixed;
+    z-index: 2;
+    right: 7vw;
+    top: 9vh;
+}
+.icon-container{
+    color: white;
+    height: 50%;
+    border-bottom: 2px solid black;
+    text-align: center;
+    padding-top: 1rem;
+    
+}
+.icon{
+    font-size: 180%;
 }
